fix products table spacing in admin

--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -15,6 +15,10 @@
   margin-top: 50px;
 }
 
+.table {
+  margin: 0px;
+}
+
 .table-btns {
   color: black;
 }
